[#176924316] Refactor over eyca activation API
